Added bibtex for related work.  Injected text from dependent types design.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4079 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.man/paper/master.bib
+++ b/trunk/x10.man/paper/master.bib
@@ -8,23 +8,23 @@ month = {April},
 url = {citeseer.ist.psu.edu/article/bierman03mj.html} }
 
 @techreport{ scala,
-author = {M.~Odersky},
+author = {Martin Odersky},
 title = {Report on the programming language {S}cala},
 institution = {EPFL},
 year = {2006},
 url = {lampwww.epfl.ch/scala/}}
 
 @techreport{ X10,
-author = {V.~Saraswat et al},
+author = {V.~Saraswat and others},
 title = {Report on the programming language {X}10},
-institution = {IBM TJ Watson Research Center},
+institution = {IBM T.J. Watson Research Center},
 year = {2006},
 url = {research.ibm.com/x10}
 }
 @techreport{ DependentTypes,
 author = {V.~Saraswat},
-title = {Adding {D}ependent {T}ypes to  {X}10},
-institution = {IBM TJ Watson Research Center},
+title = {Adding Dependent Types to {X}10},
+institution = {IBM T.J. Watson Research Center},
 year = {2004}
 }
 @inproceedings{ X10-concur,
@@ -74,7 +74,7 @@ year = {2005}
 }
 
 @misc{ gjspec
-,author="Gilad Bracha et al"
+,author="Gilad Bracha and others"
  ,title={{A}dding {G}enerics to the {J}ava {P}rogramming {L}anguage}
  ,year="2001"
 ,note="JSR 014, http://www.jcp.org/en/jsr/detail?id=014"
@@ -82,10 +82,10 @@ year = {2005}
 }
 
 @TECHREPORT{XtenLibrary,
-	AUTHOR = "Vijay Saraswat et al",
+	AUTHOR = "Vijay Saraswat and others",
 	TITLE = "The {\ccfont X10} {S}tandard {C}lass {L}ibrary",
 	TYPE = "Technical Report",
-	INSTITUTION = "IBM TJ Watson Research Center",
+	INSTITUTION = "IBM T.J. Watson Research Center",
 	ADDRESS = "New York",
 	YEAR = 2004,
         NOTE="Forthcoming"
@@ -254,7 +254,7 @@ year = {2005}
 
 @techreport{cmm
  ,title={Concurrent {C}onstraint-based {M}emory {M}achines: A framework for \java{} {M}emory {M}odels}
- ,author={V.~Saraswat}
+ ,author={Vijay Saraswat}
  ,institution="IBM T.J.Watson Research Center"
  ,month="March"
  ,year="2004"
@@ -306,7 +306,8 @@ year = {2005}
 @inproceedings{clp,
     author = "J.~Jaffar and J.-L.~Lassez",
     title = "Constraint {L}ogic {P}rogramming",
-    booktitle = "Proceedings of the 14th {A}nnual {ACM} Symposium on Principles of Programming Languages ({POPL}'87), Munich, Germany",
+    booktitle = "Proceedings of the 14th {A}nnual {ACM} Symposium on Principles of Programming Languages ({POPL}'87)",
+    location = "Munich, Germany",
     publisher = "ACM Press, New York (NY), USA",
     pages = "111--119",
     year = "1987"}
@@ -474,7 +475,7 @@ year = {1993}
 }
 
 @techreport{static-cap-support
-,author={V.~Saraswat and R.~Jagadeesan}
+,author={Vijay Saraswat and Radha Jagadeesan}
  ,title={Static Support for Capabilities in \java}
  ,institution="The Pennsylvania State University"
  ,year=" 2003"
@@ -575,9 +576,10 @@ note = {To appear in Electronic Notes in Theoretical Computer Science}
 }
 
 @inproceedings{odersky97pizza,
-    author = "M. Odersky and P. Wadler",
+    author = "Martin Odersky and Philip Wadler",
     title = "Pizza into {Java}: Translating Theory into Practice",
-    booktitle = "Proceedings of the 24th {ACM} Symposium on Principles of Programming Languages ({POPL}'97), Paris, France",
+    booktitle = "Proceedings of the 24th {ACM} Symposium on Principles of Programming Languages ({POPL}'97)",
+    location = "Paris, France",
     publisher = "ACM Press, New York (NY), USA",
     pages = "146--159",
     year = "1997",
@@ -586,7 +588,8 @@ note = {To appear in Electronic Notes in Theoretical Computer Science}
 @inproceedings{crp,
     author = "G.~Berry and S.~Ramesh and R.K.~Shyamsundar",
     title = "Communicating Reactive processes",
-    booktitle = "Proceedings of the 20th {ACM} Symposium on Principles of Programming Languages ({POPL}'93), Charleston, South Carolina",
+    booktitle = "Proceedings of the 20th {ACM} Symposium on Principles of Programming Languages ({POPL}'93)",
+    location = "Charleston, South Carolina",
     publisher = "ACM Press, New York (NY), USA",
     year = "1993"}
 
@@ -940,7 +943,7 @@ year={2000}
 }
 
 @UNPUBLISHED{jmm-double-checked-locking,
-  author =       "David Bacon et al",
+  author =       "David Bacon and others",
   title =        {``{T}he double checked locking is broken'' declaration},
   year="2000",
   note =         {http://www.cs.umd.edu/~pugh/java/memoryModel/DoubleCheckedLocking.html}
@@ -996,7 +999,7 @@ year={2000}
 }
 
 @misc{ e
-,author=" Mark S. Miller et al"
+,author=" Mark S. Miller and others"
  ,title="{\E{}}: Open Source distributed capabilities"
  ,year="1998"
 ,note="http://www.erights.org"
@@ -1756,7 +1759,9 @@ note={To appear}
                  programs",
   booktitle =    "{POPL} '99. Proceedings of the 26th {ACM}
                  {SIGPLAN}-{SIGACT} on Principles of programming
-                 languages, January 20--22, 1999, San Antonio, {TX}",
+                 languages",
+  month =        jan,
+  location =     "San Antonio, {TX}",
   publisher =    "ACM Press",
   address =      "New York, NY, USA",
   year =         "1999",
@@ -1792,7 +1797,7 @@ note={To appear}
 
 @InProceedings{cccc,
   author =       "V.~Saraswat",
-  title =        "The {C}ategory of {C}onstraint {S}ystems is {C}artesian {C}losed",
+  title =        "The Category of Constraint {S}ystems is Cartesian Closed",
   booktitle =    "{LICS} '92",
   year =         "1992",
   pages = "341--345"
@@ -1947,7 +1952,7 @@ Problems for Qualitative Reasoning"
 @inproceedings{GameAbstraction,
     author = "Thomas A. Henzinger and Rupak Majumdar and F.Y.C. Mang and J.-F. Raskin",
     title = "Abstract Interpretation of Game Properties",
-    booktitle = "Seventh International Static Analysis Symposium (SAS)",
+    booktitle = "Seventh International Static Analysis Symposium ({SAS})",
     volume = "1824",
     publisher = "Springer-Verlag",
     pages = "220--239",
@@ -2324,3 +2329,202 @@ Pisa, August 1996"
   booktitle =    {Proceedings of the National Conference on Artificial Intelligence},
   year =         1990,
 }
+
+@inproceedings{flanagan-popl06,
+  author = "Cormac Flanagan",
+  title = "Hybrid type checking",
+  booktitle = {Proceedings of the 33rd Annual Symposium on Principles of Programming Languages ({POPL'06})},
+  location = "Charleston, South Carolina",
+  pages = "245--256",
+  year = 2006
+}
+
+
+@inproceedings{ sulzmann97type,
+    author = "Martin Sulzmann and Martin Odersky and Martin Wehr",
+    title = "Type Inference with Constrained Types",
+    booktitle = "Fourth International Workshop on Foundations of Object-Oriented Programming ({FOOL} 4)",
+    year = 1997
+}
+
+
+@inproceedings{ pottier96simplifying,
+    author = "Fran\c{c}ois Pottier",
+    title = "Simplifying subtyping constraints",
+    booktitle = "Proceedings of the {ACM} {SIGPLAN} International Conference on Functional Programming ({ICFP} '96)",
+    volume = 31,
+    number = 6,
+    pages = "122--133",
+    year = 1996
+}
+
+@inproceedings{trifonov96,
+  author = "Valery Trifonov and Scott Smith",
+  title = "Subtyping constrained types",
+  booktitle = "Third International Static Analysis Symposium (SAS)",
+  year = 1996,
+  pages = "349--365",
+  series = {LNCS},
+  number = 1145
+}
+
+@phdthesis{fahndrich99,
+  author = "Manuel F{\"a}hndrich",
+  year = 1999,
+  title = "Bane: A library for scalable constraint-based program analysis",
+  school = "University of California Berkeley"
+}
+
+@article{pottier01b,
+    author = "Fran\c{c}ois Pottier",
+    title = "Simplifying subtyping constraints, a theory",
+    journal = "Information and Computation",
+    volume = 170,
+    number = 2,
+    pages = "153--183",
+    month = nov,
+    year = 2001
+}
+
+@techreport{pottier01a,
+    author = "Fran\c{c}ois Pottier",
+    title = "A semi-syntactic soundness proof for {HM(X)}",
+    number = "RR 4150",
+    institution = "INRIA",
+    month = mar,
+    year = 2001
+}
+
+
+@article{palsberg95,
+    author = "Jens Palsberg",
+    title = "Efficient inference of object types",
+    journal = "Information and Computation",
+    volume = 123,
+    number = 2,
+    pages = "198--209",
+    year = 1995
+}
+
+
+@article{smith94,
+    author = "Geoffrey S. Smith",
+    title = "Principal type schemes for functional programs with overloading and subtyping",
+    journal = "Science of Computer Programming",
+    volume = 23,
+    number = "2--3",
+    pages = "197--226",
+    month = dec,
+    year = 1994
+}
+
+@inproceedings{aiken93,
+author = "Alexander Aiken and Edward L. Wimmers",
+title = "Type inclusion constraints and type inference",
+booktitle = "{FPCA}",
+location = "Copenhagen, Denmark",
+pages = "31--41",
+month = jun,
+year = 1993
+}
+
+@book{jones94,
+    author = "Mark P. Jones",
+    title = "Qualified Types: Theory and Practice",
+    publisher = "Cambridge University Press",
+    year = 1994
+}
+
+@inproceedings{fuh88,
+    author = "You-Chin Fuh and Prateek Mishra",
+    title = "Type inference with subtypes",
+    booktitle = "European Symposium on Programming ({ESOP})",
+    series = {LNCS},
+    number = 300,
+    pages = "94--114",
+    month = mar,
+    year = 1988
+}
+
+@phdthesis{curtis90,
+    author = "Pavel Curtis",
+    title = "Constrained Quantification in Polymorphic Type Analysis",
+    school = "Cornell University",
+    month = feb,
+    year = 1990
+}
+
+@techreport{ns07-x10anno,
+    author = "Nathaniel Nystrom and Vijay Saraswat",
+    title = {An annotation and copmiler plugin system for {X}10},
+    institution = {IBM T.J. Watson Research Center},
+    number = "RC24198",
+    year = 2007
+}
+
+@techreport{gps06-arrays,
+    author = "Christian Grothoff and Jens Palsberg and Vijay Saraswat",
+    title = "Safe Arrays via Regions and Dependent Types",
+    institution = {IBM T.J. Watson Research Center},
+    number = "RC23911",
+    year = 2006
+}
+    
+@inproceedings{ncm03,
+	Address = {Warsaw, Poland},
+	Author = {Nathaniel Nystrom and Michael R. Clarkson and Andrew C. Myers},
+	Booktitle = {Compiler Construction, 12th International Conference, CC 2003},
+	Editor = {G{\"o}rel Hedin},
+	Month = apr,
+	Number = 2622,
+	Pages = {138--152},
+	Publisher = SV,
+	Series = lncs,
+	Title = {Polyglot: An Extensible Compiler Framework for {J}ava},
+	Year = 2003}
+
+
+@inproceedings{xi99dependent,
+        Address = {San Antonio, TX},
+        Author = {Hongwei Xi and Frank Pfenning},
+        booktitle = "Proceedings of the 26th {A}nnual {ACM} Symposium on Principles of Programming Languages ({POPL}'99)",
+        Month = Jan,
+        Pages = {214--227},
+        Title = {Dependent Types in Practical Programming},
+        Year = 1999}
+
+@inbook{pottier-remy-attapl,
+  author = "Fran\c{c}ois Pottier and Didier R{\'e}my",
+  chapter = "10, The Essence of {ML} Type Inference",
+  title = "Advanced Topics in Types and Programming Languages",
+  editor = "Benjamin C. Pierce",
+  publisher = "{MIT} Press",
+  year = 2004
+}
+
+
+@book{attapl,
+  title = "Advanced Topics in Types and Programming Languages",
+  editor = "Benjamin C. Pierce",
+  publisher = "{MIT} Press",
+  year = 2004
+}
+
+@inproceedings{mitchell84,
+  author = "John C. Mitchell",
+  title = "Coercion and type inference",
+  booktitle = "Proceedings of the 11th {A}nnual {ACM} Symposium on Principles of Programming Languages ({POPL}'84)",
+  pages = "174--185",
+  year = 1984
+}
+
+@inproceedings{where-clauses,
+  address = "Austin, TX",
+  author = "Mark Day and Robert Gruber and Barbara Liskov and Andrew C. Myers",   
+  booktitle = "Proceedings of the 1995 {ACM} Conference on Object-Oriented Programming Systems, Languages, and Applications ({OOPSLA})",
+  month = oct, 
+  pages = "156--168",
+  title = "Subtypes vs. Where Clauses: Constraining Parametric Polymorphism",   
+  Year = 1995
+}
+
